--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+		<!--<img class="masthead-avatar mb-5" src="assets/img/5853.svg" alt="..." />-->
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Nalívárna</h1>
                 <!--<div id="root"></div>-->
@@ -64,8 +65,8 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <!--<div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-chalkboard-user"></i></div>-->
-                    <div class="divider-custom-icon"><i class="fa-solid fa-infinity"></i></div>
+                    <div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-chalkboard-user"></i></div>
+                    <!--<div class="divider-custom-icon"><i class="fa-solid fa-infinity"></i></div>-->
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
@@ -131,7 +132,8 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fa-solid fa-apple-whole"></i></div>
+                    <div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-chalkboard-user"></i></div>
+                    <!--<div class="divider-custom-icon"><i class="fa-solid fa-apple-whole"></i></div>-->
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
