--- a/public/index.html
+++ b/public/index.html
@@ -256,14 +256,22 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><i class="fas unknown"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
+                                    
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+<div class="wrapper">
+	
+	<ul role="list">
+		<li class="inf m-b-2">The best way to approach your  With that in mind, the first 
+  <h5 class="lead">man subtitle <a href="assets/img/1tyzden.pdf">example</a></h5></li>
+		<li class="inf">With all the algae now settled on the gravel down below, it's time to give the gravel itself a quick clean – thus getting rid of any flakes of uneaten food or waste too.</li>
+		<li class="inf">Once you've cleaned the gravel, you'll notice the water level in the tank will have dropped (between 10% and 20% is normal) – so now it's time to top it back up again. To do this, simply use a designated jug to transfer water into the tank – just make sure the water you're adding has been treated to suit your fish (and make sure it’s about the same temperature as your tank too!).</li>
+		<li class="inf"><a href="assets/img/1tyzden.pdf">example</a></li>
+	</ul>
+</div>                                    <button class="btn btn-primary  " data-bs-dismiss="modal" onclick="location.href='#about'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -314,7 +322,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                                    <!--<h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>-->
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -324,8 +332,16 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+
+<div class="wrapper">
+	
+	<ul role="list">
+		<li class="inf m-b-2">The best way to approach your tank clean is to start at the top before working your way down to the bottom. With that in mind, the first job on the to-do list is to get rid of any algae that's stuck to your tank's glass.</li>
+		<li class="inf">With all the algae now settled on the gravel down below, it's time to give the gravel itself a quick clean – thus getting rid of any flakes of uneaten food or waste too.</li>
+		<li class="inf">Once you've cleaned the gravel, you'll notice the water level in the tank will have dropped (between 10% and 20% is normal) – so now it's time to top it back up again. To do this, simply use a designated jug to transfer water into the tank – just make sure the water you're adding has been treated to suit your fish (and make sure it’s about the same temperature as your tank too!).</li>
+		<li class="inf">Last on the list of jobs is to clean your filter. This only has to be done once every two weeks or so. To do this, simply pop open your filter, remove the sponge from within and soak in the dirty water you've just removed from the tank.</li>
+	</ul>
+</div>                                    <button class="btn btn-primary  mb-0" data-bs-dismiss="modal" onclick="location.href='#about'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -349,7 +365,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><i class="fas unknown"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -357,12 +373,12 @@
                                     <!-- Portfolio Modal - Text-->
 				    <div class="container">
 					<div class="wrapper">
-	<h1>How to clean your fish tank</h1>
+	
 	<ul role="list">
-		<li>The best way to approach your tank clean is to start at the top before working your way down to the bottom. With that in mind, the first job on the to-do list is to get rid of any algae that's stuck to your tank's glass.</li>
-		<li>With all the algae now settled on the gravel down below, it's time to give the gravel itself a quick clean – thus getting rid of any flakes of uneaten food or waste too.</li>
-		<li>Once you've cleaned the gravel, you'll notice the water level in the tank will have dropped (between 10% and 20% is normal) – so now it's time to top it back up again. To do this, simply use a designated jug to transfer water into the tank – just make sure the water you're adding has been treated to suit your fish (and make sure it’s about the same temperature as your tank too!).</li>
-		<li>Last on the list of jobs is to clean your filter. This only has to be done once every two weeks or so. To do this, simply pop open your filter, remove the sponge from within and soak in the dirty water you've just removed from the tank.</li>
+		<li class="inf ">The best way to approach your tank clean is to start at the top before working your way down to the bottom. With that in mind, the first job on the to-do list is to get rid of any algae that's stuck to your tank's glass.</li>
+		<li class="inf">With all the algae now settled on the gravel down below, it's time to give the gravel itself a quick clean – thus getting rid of any flakes of uneaten food or waste too.</li>
+		<li class="inf">Once you've cleaned the gravel, you'll notice the water level in the tank will have dropped (between 10% and 20% is normal) – so now it's time to top it back up again. To do this, simply use a designated jug to transfer water into the tank – just make sure the water you're adding has been treated to suit your fish (and make sure it’s about the same temperature as your tank too!).</li>
+		<li class="inf">Last on the list of jobs is to clean your filter. This only has to be done once every two weeks or so. To do this, simply pop open your filter, remove the sponge from within and soak in the dirty water you've just removed from the tank.</li>
 	</ul>
 </div>
 				    </div>
@@ -508,11 +524,11 @@
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
 -->
 <div class="" style="text-align:center; margin-left: ;
-    margin-right: ; padding-top:60px; padding-bottom:60px; max-width:; width:">
+    margin-right: ; padding-top:0px; padding-bottom:0px; max-width:; width:">
 
   <h5 class="lead"><strong>main title</strong></h5>
   <br>
-  <h5 class="lead">man subtitle <a href="assets/img/1tyzden.pdf">example</a></h5>
+  <!--<h5 class="lead">man subtitle <a href="assets/img/1tyzden.pdf">example</a></h5>-->
   <br>
   <div >
     <h5 class="lead" style="text-align:justify;">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and </h5>
