--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 					<i class="fa-sharp fa-solid fa-chalkboard-user fa-3x"></i>
 				</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cover.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/" alt="..." />
                         </div>
                     </div>
                     
@@ -110,7 +110,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-chalkboard-user"></i></div>
+                    <!--<div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-chalkboard-user"></i></div>-->
                     <!--<div class="divider-custom-icon"><i class="fa-solid fa-apple-whole"></i></div>-->
                     <div class="divider-custom-line"></div>
                 </div>
@@ -124,7 +124,7 @@
 					<i class="fa-sharp fa-solid fa-chalkboard-user fa-3x"></i>
 				</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cover.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/" alt="..." />
                         </div>
                     </div>
                    
