--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 					<i class="fa-sharp fa-solid fa-chalkboard-user fa-3x"></i>
 				</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/cover_temp.png" alt="..." />
                         </div>
                     </div>
                     
@@ -124,7 +124,7 @@
 					<i class="fa-sharp fa-solid fa-chalkboard-user fa-3x"></i>
 				</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/cover_temp.png" alt="..." />
                         </div>
                     </div>
                    
