--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-       <!-- <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -110,6 +110,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
+		    <div class="divider-custom-icon"><i class="far fa-atom-alt"></i></div>
                     <!--<div class="divider-custom-icon"><i class="fa-sharp fa-solid fa-chalkboard-user"></i></div>-->
                     <!--<div class="divider-custom-icon"><i class="fa-solid fa-apple-whole"></i></div>-->
                     <div class="divider-custom-line"></div>
@@ -256,7 +257,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas unknown"></i></div>
+                                        <div class="divider-custom-icon"><i class="far fa-atom-alt"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -365,7 +366,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas unknown"></i></div>
+                                        <div class="divider-custom-icon"><i class="far fa-atom-alt"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
