--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
 		<!--<img class="masthead-avatar mb-5" src="assets/img/5853.svg" alt="..." />-->
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Nalívárna</h1>
