--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/portfolio/cover_temp.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="assets/img/undraw_educator_re_ju47.svg" alt="..." /> 
 		<!--<img class="masthead-avatar mb-5" src="assets/img/5853.svg" alt="..." />-->
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Nalívárna</h1>
@@ -86,7 +86,8 @@
 					<i class="fa-sharp fa-solid fa-chalkboard-user fa-3x"></i>
 				</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cover_temp.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/undraw_projections_re_ulc6.png" 
+     alt="..." />
                         </div>
                     </div>
                     
@@ -125,7 +126,8 @@
 					<i class="fa-sharp fa-solid fa-chalkboard-user fa-3x"></i>
 				</div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cover_temp.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/undraw_logic_re_nyb4.png" 
+      alt="..." />
                         </div>
                     </div>
                    
@@ -266,11 +268,11 @@
 <div class="wrapper">
 	
 	<ul role="list">
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101, 4MM106 <span>&#8722;</span> <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>MFF UK</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101, 4MM106 <span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>MFF UK</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
 	</ul>
 </div>       
 
@@ -377,10 +379,10 @@
 					<div class="wrapper">
 	
 	<ul role="list">
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101, 4MM106 <span>&#8722;</span> <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/img/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101, 4MM106 <span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
 	</ul>
 </div>
 				    </div>
