--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Nalívárna</a>
+                <a class="navbar-brand" href="">Nalívárna</a>
                 
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -29,9 +29,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Předměty</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">Cenník</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Kontakt</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#predmety">Předměty</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#cenik">Ceník</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#kontakt">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +63,7 @@
 
 
 
-        <section class="page-section portfolio" id="portfolio">
+        <section class="page-section portfolio" id="predmety">
             
             <div class="container">
 	  	 <div class="row">
@@ -149,10 +149,10 @@
 
 
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+        <section class="page-section bg-primary text-white mb-0" id="cenik">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Cenník</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Ceník</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -166,7 +166,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="#contact">
+                    <a class="btn btn-xl btn-outline-light" href="#kontakt">
                         <!--<i class="fa-solid fa-arrow-down"></i>-->
                         Kontaktujte nás!
                     </a>
@@ -174,7 +174,7 @@
             </div>
         </section>
         <!-- Contact Section-->
-        <section class="page-section" id="contact">
+        <section class="page-section" id="kontakt">
             <div class="container">
                 <!-- Contact Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Kontakt</h2>
@@ -280,7 +280,7 @@
 
 <div class="divider-custom"></div>
 
-                             <button class="btn btn-primary  " data-bs-dismiss="modal" onclick="location.href='#about'">   
+                             <button class="btn btn-primary  " data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -311,7 +311,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -346,7 +346,7 @@
 
 <div class="divider-custom"></div>
 
-                              <button class="btn btn-primary  mb-0" data-bs-dismiss="modal" onclick="location.href='#about'">   
+                              <button class="btn btn-primary  mb-0" data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -389,7 +389,7 @@
 </div>
 				    </div>
 <div class="divider-custom"></div>
-                                                                   <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+                                                                   <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -420,7 +420,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -451,7 +451,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
@@ -483,7 +483,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#about'">   
+                                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="location.href='#cenik'">   
                                         Chci vědět víc
                                     </button>
                                 </div>
