--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Nabízíme komplexní rychlokurzy matematiky (lineární algebra a matematická analýza) a fyziky pro vybrané předměty odpovídající 1. ročníkům univerzit VŠE, VŠCHT, ČVÚT, MFF UK.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
                 </div>
                 <!-- About Section Button-->
@@ -270,11 +270,13 @@
 <div class="wrapper">
 	
 	<ul role="list">
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101, 4MM106 <span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101<span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> <br>
+				<div></div> <div style="min-width:10%; width:10%"></div> <br> <div><strong style = "padding-right20px">4MM106 <span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<!--<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>-->
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">B413001 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
 		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>MFF UK</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>MFF UK</strong></div> <br> <div><strong style = "padding-right20px">NOFY141 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> 
+				<div></div> <div style="min-width:10%; width:10%"></div> <br> <div><strong style = "padding-right20px">NOFY151<span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
 	</ul>
 </div>       
 
@@ -381,10 +383,14 @@
 					<div class="wrapper">
 	
 	<ul role="list">
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>VŠE</strong></div> <br> <div><strong style = "padding-right20px">4MM101, 4MM106 <span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
-		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<!--<li class="inf"><div style="min-width:10%; width:10%""><strong>ČZU</strong></div> <br> <div><strong style = "padding-right20px">4MM101 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div> </li>-->
+		<li class="inf"><div style="min-width:10%; width:10%""><strong>VŠCHT</strong></div> <br> <div><strong style = "padding-right20px">B444003  - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>ČVUT</strong></div> <br> <div><strong style = "padding-right20px">102FYY1 - <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> 
+				<div></div> <div style="min-width:10%; width:10%"></div> <br> <div><strong style = "padding-right20px">102FY_1<span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+		<li class="inf"><div style="min-width:10%; width:10%"><strong>MFF UK</strong></div> <br> <div><strong style = "padding-right20px">NOFY021<span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> 
+				<div></div> <div style="min-width:10%; width:10%"></div> <br> <div><strong style = "padding-right20px">NOFY018<span>&#8722;</span> <a href="assets/fil/1tyzden.pdf">ukázka studijních materiálů</strong></a> </div></li>
+
+
 	</ul>
 </div>
 				    </div>
