--- a/public/index.html
+++ b/public/index.html
@@ -541,7 +541,7 @@
 <div class="" style="text-align:center; margin-left: ;
     margin-right: ; padding-top:0px; padding-bottom:0px; max-width:; width:">
 
-  <h5 class="lead"><strong>main title</strong></h5>
+  <!--<h5 class="lead"><strong>main title</strong></h5>
   <br>
   <h5 class="lead">main subtitle</h5>
   <br>
@@ -557,15 +557,43 @@
   <h5><strong>I.</strong></h5>
   <h5><strong>title I</strong></h5>
   <br>
+  <div>-->
   <div>
-
-    <div class="left"><h5 style="text-align:justify;">1.1</h5></div>
-    <div class="right"><h5 style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      <strong>Nalívárna</strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5></div>
+  <h5 class="left" style="text-align:justify;"><strong>Zpracováváme o Vás tyto osobní údaje:</strong></h5>
+  </div>
+  <br>
+    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="right"><h5 style="text-align:justify;">jméno;</h5></div>
+    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="right"><h5 style="text-align:justify;">příjmení;</h5></div> 
+    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="right"><h5 style="text-align:justify;">emailová adresa;</h5></div> 
+    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="right"><h5 style="text-align:justify;">telefonní kontakt;</h5></div> 
+    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="right"><h5 style="text-align:justify;">speciální požadavky;</h5></div> 
+    <div class="left"><h5 style="text-align:justify;"></h5></div>
+    <div class="right"><h5 style="text-align:justify;">vybraná vysoká škola.</h5></div> 
+  <div>
+  <br>
+  <h5 class="left" style="text-align:justify;"><strong>Správcem vašich údajů je Team Nalívárna (Nalívárna©), email: ?nalivarna?@gmail.com.</strong></h5>
+  <br>
+  <div>
+  <h5 class="left" style="text-align:justify;"><strong>Všechny tyto osobní údaje jsou zpracovávány na základě vyplnění tohoto kontaktního formuláře na
+ kurzy poskytované Nalívárnou. Údaje jsou zpracovávány na základě oprávněného zájmu správce, a to pouze za účelem vedení evidence potenciálních účastníků
+ kurzů. Tyto údaje budou uloženy v soukromé databázi Nalívárna po dobu 3 let od posledního přihlášení na kurzy (/absolvování kurzu). Přístup k nim bude
+ mít pouze Team Nalívárna a třetí osoby, které budou na základě pověření správce konat v našem jménu při poskytovaní služeb anebo při výkone jiné činnosti
+ související s poskytováním služeb. Všichni jsou vázáni mlčenlivostí.</strong></h5>
+  <br>
+  <h5 class="left" style="text-align:justify;"><strong>Máte právo na opravu, změnu či výmaz vašich osobních údajů. Můžete si vyžádat dodatečné informace
+ o vašich osobních údajích a to na emailu správce osobních údajů. V případě podezření na zneužívání údajů či protiprávního jednání, máte zcela vyhrazené
+ právo na nahlášení událostí na příslušný dozorový úřad.</strong></h5>
 
   </div>
+  </div>   
+  </div>
 
-  <div>
+  <!--<div>
 
     <div class="left"><h5 style="text-align:justify;">1.2</h5></div>
     <div class="right"><h5 style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
@@ -629,7 +657,7 @@
     <div class="right"><h5 style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5></div>
         
   </div>
-
+-->
 </div>
         
   </div>
